增加锁的章节